# cpp-c

./: README.md  cmake-list-contents.sh  cmake-run.sh  make-run.sh
src/: CMakeLists.txt  Makefile  cClient.c  corelibrary.cpp  cppClient.cpp  list-contents.sh  wrapper.cpp
src/include/: corelibrary.hpp  wrapper.h
